--- a/HomeTasks/3/index.html
+++ b/HomeTasks/3/index.html
@@ -15,8 +15,6 @@
                     <img src="./pic/Frodo.jpg" alt="" class="pic_in_text">
                     <p>
                         Фродо родился 22 сентября 2968 года Т.Э. в Шире Остался сиротой в 12 лет, его родители — Дрого Бэггинс и Примула Брендибак — погибли, утонув в Брендивине. Фродо был взят на воспитание своим дедом по матери, Горбадоком Брендибаком, а спустя 9 лет усыновлен двоюродным дедушкой, Бильбо, и переехал в Бэг-Энд.
-                    </p>
-                    <p>
                         После отъезда Бильбо в Ривенделл Фродо унаследовал усадьбу и магическое Кольцо, которым владел его двоюродный дед. В последовавшие за тем десятилетия он увлекался литературой, дальними прогулками, имел тесную компанию близких друзей и испытывал духовную потребность сблизиться с эльфами. Маг Гэндальф предупредил Фродо, что Кольцо принадлежит тёмному властелину Саурону, которому оно нужно для полного возрождения и абсолютной власти. Слуги Саурона ищут Кольцо, поэтому почти 20 лет спустя после отъезда Бильбо Фродо должен покинуть Шир, но под влиянием кольца внешне оставшийся, Фродо продаёт усадьбу дальним родственникам Саквиль-Бэггинсам и вместе с садовником Сэмом и друзьями Пиппином и Мерри отправляется в путь в обитель эльфов Ривенделл. В Пригорье они встречают человека по имени Арагорн, следопыта Севера, друга Гэндальфа, которому поручено проводить их.
                     </p>
                 </div>
@@ -38,8 +36,6 @@
                     <img src="./pic/Pippin.jpg" alt="" class="pic_in_text">
                     <p>
                         Перегрин Тук родился в 2990 году Т. Э. в семье тана Паладина II и Эглантины Тук и являлся младшим ребёнком (у него были три старшие сестры — Перлина, Очецвета и Душица) и единственным сыном. Его лучший друг — Мериадок Брендибак — является его двоюродным братом по отцовской линии. Был младше Мериадока на восемь лет.
-                    </p>
-                    <p>
                         В 3018 году Т. Э., когда Фродо Бэггинс по совету Гэндальфа Серого всё-таки отправился в Ривенделл, унося с собой Кольцо Всевластья, Перегрин Тук стал одним из его спутников.
                     </p>
                 </div>
@@ -50,9 +46,7 @@
                 <div id="flex">
                     <img src="./pic/Meriadoc.jpg" alt="" class="pic_in_text">
                     <p>
-                        Мериадок Брендибак родился в 2982 году Третьей Эпохи Средиземья в семействе Сарадока Брендибака, Хозяина Бакленда, и Эсмеральды Тук; таким образом, он приходится двоюродным братом Перегрину Туку и родственником Бильбо и Фродо Бэггинса по материнской линии.
-                    </p>
-                    <p>
+                        Мериадок Брендибак родился в 2982 году Третьей Эпохи Средиземья в семействе Сарадока Брендибака, Хозяина Бакленда, и Эсмеральды Тук; таким 
                         Будучи по натуре предприимчивым и осторожным, он по собственной воле решает оказать Фродо Бэггинсу помощь в уходе из Шира, а также становится его спутником наряду с Перегрином Туком и Сэмом Гэмджи. Именно Мерри принадлежит инициатива воспользоваться для бегства от назгулов тропами Старого Леса (в котором они, правда, чуть было не сгинули).
                     </p>
                 </div>
@@ -64,8 +58,6 @@
                     <img src="./pic/Gandalf.jpg" alt="" class="pic_in_text">
                     <p>
                         Гэндальф — архетипический мудрый волшебник, традиционная фигура в знакомой Дж. Р. Р. Толкину скандинавской и британской мифологии. Имя «Гэндальф», или, вернее, «Гандальв», позаимствовано из древненорвежской поэмы Dvergatal, где оно принадлежит одному из «нижних свартальвов» (гномов).
-                    </p>
-                    <p>
                         Неизвестно, когда именно Гэндальф впервые заинтересовался народом хоббитов. Он любил их и к тому же предчувствовал, что они в будущем сыграют исключительно важную роль. Правда, среди хоббитов Гэндальф был известен прежде всего как «маг» и «чародей» в самом общеупотребительном смысле этого слова. Так, в книге «Хоббит» устами Бильбо сообщается, что он подарил Старому Туку волшебные алмазные запонки, которые сами застёгивались, но расстёгивались только по приказу. Особую известность ему принесли и чудесные фейерверки, которые он устраивал в канун Дня Середины Лета на вечеринке у Старого Тука. При этом, однако, следует упомянуть и тот факт, что именно Гэндальф в 2758-59 гг. Т. Э. (1168-70 гг. по Летосчислению Шира) пришёл на помощь хоббитам Шира во время Долгой Зимы и последовавшего за нею страшного голода.
                     </p>
                 </div>
@@ -97,8 +89,6 @@
                     <img src="./pic/Aragorn.jpg" alt="" class="pic_in_text">
                     <p>
                         Арагорн II (названный в честь своего предка Арагорна I) — сын Араторна II и Гилраэнь, родился 1 марта 2931 Т. Э.. С 2951 г. Т. Э. — 16-й (и последний) предводитель дунэдайн. Арагорн II, 39-й потомок Исилдура по прямой линии (а также Анариона, так как последний правящий северный король Арведуи был женат на дочери гондорского короля Ондогера), вождь дунэдайн Севера, после Войны Кольца — король Воссоединённого королевства Гондора и Арнора. Супруг Арвен, дочери Элронда, отец Эльдариона и нескольких дочерей.
-                    </p>
-                    <p>
                         В 3018-3019 гг. Т. Э. Арагорн участвовал в Войне Кольца. В 3018 г. он стал членом Братства Кольца, а после падения Гэндальфа в пропасть под мостом Казад-Дума возглавил отряд. Довёл отряд до Водопадов Рэроса, где допустил непростительную ошибку — позволил Боромиру остаться наедине с Фродо. Когда Боромир стал требовать от Фродо либо отдать кольцо ему, либо нести его в Минас Тирит, Фродо, надев Кольцо, бежал. Братство Кольца распалось. Разыскивая Фродо, Арагорн пропустил момент нападения орков, последний бой Боромира и пленение хоббитов Перегрина и Мериадока. Похоронив Боромира, Арагорн вместе с Гимли и Леголасом отправились выручать пленных хоббитов. Преследуя орков, они повстречали Гэндальфа, возродившегося после битвы с Балрогом.
                     </p>
                 </div>
@@ -110,8 +100,6 @@
                     <img src="./pic/Boromir.jpg" alt="" class="pic_in_text">
                     <p>
                         Боромир был главой войск Гондора, в частности, под его командованием у орков Саурона весной 3018 г. Т. Э. был отбит Осгилиат. В ночь после решающей битвы Боромиру и его брату Фарамиру одновременно приснился один и тот же сон, в котором они услышали непонятное пророчество о вновь откованном в Имладрисе Сломанном Мече Элендила и некоем Проклятии Исилдура, которое должен будет взять на себя «полурослик».
-                    </p>
-                    <p>
                         Ещё находясь в Ривенделле, Боромир на совете у Элронда горячо настаивал на том, что Кольцо следует употребить против Саурона, а не уничтожать его, отправив в самое сердце владений Саурона с сомнительными шансами на успех. После того как Братство покинуло Лориэн, Боромир, поддавшись искушающей силе Кольца, попытался отобрать его у Фродо и тем самым побудил его оставить отряд и в одиночку пробираться в Мордор.
                     </p>
                 </div>
