--- a/HomeTasks/5/index.html
+++ b/HomeTasks/5/index.html
@@ -6,19 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">
         <div class="header">
             <div class="logo">
-                <img src="./pic/index.png" alt="">
+                <img id="logo" src="./pic/index.png" alt="">
             </div>
             <div class="buttons">
-                <div class="but"><button>1</button></div>
-                <div class="but"><button>1</button></div>
-                <div class="but"><button>1</button></div>
-                <div class="but"><button>1</button></div>
-                <div class="but"><button>1</button></div>
+                <div class="but">
+                    <a href="https://www.gomel.it-academy.by/" target="_blank">
+                        <button id="it">
+                            <span>IT Academy</span>
+                        </button>
+                    </a>
+                </div>
+                <div class="but">
+                    <a href="https://gomel.iteen.by/" target="_blank">
+                        <button id="iteen">
+                            <span>ITeen Academy</span>
+                        </button>
+                    </a>
+                </div>
+                <div class="but">
+                    <a href="https://gomel.openit.by/" target="_blank">
+                        <button id="it">
+                            <span>OPEN IT 2021</span>
+                        </button>
+                    </a>
+                </div>
+                <div class="but">
+                    <a href="https://gomel.openit.by/2020/" target="_blank">
+                        <button id="it">
+                            <span>OPEN IT 2020</span>
+                        </button>
+                    </a>
+                </div>
             </div>
             <div class="data">
                 <div class="photo">
@@ -32,18 +57,145 @@
         </div>
         <div class="content">
             <div class="con_left">
-                <div class="letf_up"></div>
+                <div class="letf_up">
+                    <div id="beard">
+                        <span>
+                            <img src="https://gomel.openit.by/sites/default/files/2020-02/%D0%B0%D0%B9%D1%82%D0%B8%D0%B1%D0%BE%D1%80%D0%BE%D0%B4%D0%B0.png" alt="">
+                            <p>Ведущий</p>
+                            <a href="https://www.youtube.com/channel/UCeObZv89Stb2xLtjLJ0De3Q">
+                                Лекс АйТиБорода
+                            </a>
+                            <p>.Net-разработчик и IT блогер (Минск)</p>
+                        </span>
+                    </div>
+                </div>
                 <div class="left_down">
-                    <div class="ld_1"></div>
-                    <div class="ld_2"></div>
-                    <div class="ld_3"></div>
-                    <div class="ld_4"></div>
+                    <span id="partners">Имидж-Партнеры</span>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2020-02/epam_big2.png" alt="">
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-02/senla_12.png" alt="">
+                    </div>
                 </div>
             </div>
-            <div class="con_center"></div>
-            <div class="con_right"></div>
+            <div class="con_center">
+                <img src="https://events.dev.by/ckeditor_assets/pictures/41088/content_devby.png" alt="">
+                <span>
+                    <p>
+                    Мечтаешь войти в айти и стать крутым специалистом? Но как понять, к чему душа лежит: программированию, тестированию, веб-дизайну или бизнес-анализу. Мы поможем разобраться! Приходи на Open IT – главную профориентирующую конференцию для начинающих айтишников – и выбирай профессию своей мечты. 
+                    Формат проведения: ОНЛАЙН и ОЧНО (вы сами выбираете удобный). Количество оффлайн-мест ограничено, поэтому на Open IT нужно регистрироваться уже и не забывать маску – это обязательные условия.
+                    </p>
+                    В программе:
+                    <ul>
+                        <li>
+                            Что нужно делать, чтобы попасть в IT?
+                        </li>
+                        <li>
+                            Более 10 выступлений спикеров на злободневные темы.
+                        </li>
+                        <li>
+                            Разбор профессий программиста, тестировщика, бизнес-аналитика, проджект-менеджера, DevOps-инженера и других.
+                        </li>
+                        <li>
+                            Реальные истории перехода в сферу высоких технологий и покорения индустрии.
+                            Баттл технологий! Выбираем лучший язык программирования для новичка в IT.
+                        </li>
+                        <li>
+                            Реальные истории перехода в сферу высоких технологий и покорения индустрии.
+                            Баттл технологий! Выбираем лучший язык программирования для новичка в IT.
+                        </li>
+                        <li>
+                            5 мастер-классов от экспертов индустрии (будет вестись отдельная регистрация).
+                        </li>
+                        <li>
+                            Розыгрыши подарков, логические задачи, викторины от IT-Academy и партнеров.
+                        </li>
+                    </ul>
+                    <p>
+                        Open IT – реальный шанс для молодежи присоединиться к IT-сообществу, прокачать скиллы, получить рекомендации по трудоустройству, найти работу, пообщаться с  интересными людьми и узнать больше о последних тенденциях в IT. В декабре 2019 года конференция Open IT удостоена Первой Всебелорусской Молодежной премии в номинации «Событие года-2019».  
+                        Программа конференции формируется. Следи за анонсами.
+                        Подробности на сайте.
+                    </p>
+                </span>
+            </div>
+            <div class="con_right">
+                <span id="partners">Партнеры</span>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2019-08/p16.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-02/company-logo_OXA.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-02/godel.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2019-10/itchart_0.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-02/stiltsoft.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-02/andeson.png" alt="">
+                </div>
+                <span id="partners">Информационные партнеры</span>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2019-07/p1a.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2020-01/sn.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-02/rabota2.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2019-07/p3_0.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2019-08/officelife.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-02/marketing.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2019-08/novoeradio.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-02/mb.by_.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2019-08/p5.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-02/vsekursy.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-03/jobsora4.png" alt="">
+                </div>
+                <div>
+                    <img src="https://gomel.openit.by/sites/default/files/2021-03/belbiz2_1.png" alt="">
+                </div>
+            </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <div class="social">
+                <a href="https://www.facebook.com/itacademygomel"><img src="./pic/f.png" alt=""></a>
+                <a href="https://vk.com/itacademygomel"><img src="./pic/vk.png" alt=""></a>
+                <a href="https://www.instagram.com/itacademy.gomel/"><img src="./pic/inst.png" alt=""></a>
+            </div>
+            <div class="logo">
+                <img id="logo1" src="./pic/index.png" alt="">
+            </div>
+            <div class="footer_p">
+                <p>Менеджеры проекта — Диана Кочеткова (Минск), Марина Зубова (Гомель)</p>
+                <p>openit@it-academy.by</p>
+                <p>+375 29 623 78 96</p>
+                <p>skype: diakey</p>
+                <p>© 2021 ООО "Образовательный центр программирования и высоких технологий"</p>
+            </div>
+        </div>
     </div>
+
 </body>
 </html>
