--- a/HomeTasks/6/index.html
+++ b/HomeTasks/6/index.html
@@ -84,7 +84,7 @@
                 </tr>
                 <tr>
                     <td class="border" id="td20">3</td>
-                    <td class="black" class="chess" id="wking"></td>
+                    <td id="black" class="chess" id="wking"></td>
                     <td></td>
                     <td id="black"></td>
                     <td></td>
