--- a/HomeTasks/6/index.html
+++ b/HomeTasks/6/index.html
@@ -26,7 +26,7 @@
                     <td class="border" id="td20">8</td>
                     <td></td>
                     <td id="black"></td>
-                    <td></td>
+                    <td class="chess" id="brook"></td>
                     <td id="black"></td>
                     <td></td>
                     <td id="black"></td>
