--- a/HomeTasks/7/index.html
+++ b/HomeTasks/7/index.html
@@ -57,6 +57,7 @@
                         С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Если у вас есть какие то интересные предложения, обращайтесь! Студия Web-Boss всегда готова решить любую задачу. Не следует, однако забывать, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации форм развития.
                     </p>
                 </div>
+                <div></div>
             </div>
             <div class="footer">
                 <p>© Some company 2021</p>
