--- a/HomeTasks/7/index.html
+++ b/HomeTasks/7/index.html
@@ -18,9 +18,8 @@
                 </div>
                 <div class="auth">
                     <button>
-                        Sign up
-                    </button>
-
+                        <a href="./signin.html">Sign up</a>
+                    </button>   
                 </div>
             </div>
             <div class="content">
