--- a/9/index.html
+++ b/9/index.html
@@ -10,9 +10,29 @@
     <body>
         <div class="main">
             <div class="header"></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <form>
+                    <span>I don't know why there is a login here, but nevertheless</span>
+                    <div>
+                        <label for="email">E-mail</label>
+                        <input type="email" placeholder="Enter e-mail" required>
+                    </div>
+                    <div>
+                        <label for="pass">Enter password</label>
+                        <input id="pass" type="password" placeholder="Password" required>
+                    </div>
+                    <div id="btns">
+                        <button type="reset">Clear</button>
+                        <button type="submit">Sign in</button> 
+                    </div>
+                </form>
+            </div>
+            <div id="content">
+                <embed src="./doc/army.txt" type="">
+            </div>
+            <div>
+                <img src="./pic/voenkom.jpg" alt="">
+            </div>
             <div class="footer"></div>
         </div>
     </body>
