--- a/9/index.html
+++ b/9/index.html
@@ -5,23 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
-        <title>Document</title>
+        <title>F*cking army</title>
     </head>
     <body>
         <div class="main">
             <div class="header">
-                <div>
-                    <img src="" alt="">
+                <div id="logo">
+                    <img src="./pic/pig2.png" alt="">
                 </div>
                 <div></div>
-                <div>
-                    <button>Sign up</button>
+                <div id="signup">
+                    <button><a href="#form_modal">Sign up</a></button>
                 </div>
             </div>
             <div>
                 <form>
-                    <span>I don't know why t</span>
-                    <!-- <span>I don't know why there is a login here, but nevertheless</span> -->
+                    <span id="spansignin">I don't know why</span>
                     <div>
                         <label for="email">E-mail</label>
                         <input type="email" placeholder="Enter e-mail" required>
@@ -37,10 +36,15 @@
                 </form>
             </div>
             <div id="content">
-                <iframe src="./doc/army.txt" frameborder="0"></iframe>
+                <iframe id="doc" src="./doc/army.txt" frameborder="0"></iframe>
             </div>
-            <div>
+            <div id="pricol">
                 <img src="./pic/voenkom.jpg" alt="">
+                <p>Не хочу в армию</p>
+                <audio controls="controls">
+                    <source src="./audio/ne-hochu-v-armiyu-bez-nazvaniya.mp3" type="audio/mpeg">
+                </audio>
+                <iframe src="https://www.youtube.com/embed/AkS4yAEoSBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="footer"></div>
         </div>
@@ -85,6 +89,9 @@
                     <button type="submit">Register</button> 
                 </div>
             </form>
+        </div>
+        <div id="maxwidth">
+            <span>STOP COMPRESS IT!!!!</span>
         </div>
     </body>
 </html>
