--- a/9/index.html
+++ b/9/index.html
@@ -84,7 +84,7 @@
                     <input id="avatar" type="file" required>
                 </div>
                 <div id="btns">
-                    <button><a href="./index.html">Close</a></button>
+                    <button><a href="#">Close</a></button>
                     <button type="reset">Clear</button>
                     <button type="submit">Register</button> 
                 </div>
