--- a/10/index.html
+++ b/10/index.html
@@ -10,19 +10,172 @@
     <body>
         <div class="main">
             <div class="header">
-                <div id="logo">
+                <div class="logo">
                     <img src="./pic/pig.png" alt="">
                 </div>
-                <div>fgfg</div>
+                <div id="sitename">
+                    <span>Don't forget start the koala</span>
+                </div>
                 <div id="photo">
                     <img src="https://avatars.githubusercontent.com/u/78950448?s=460&u=789af2214363ef897aad501d4e1b53afe5d4183d&v=4" alt="">
                 </div>
-                <div id="signin">fgfg</div>
+                <div id="signup">
+                    <a href="#form_modal"><button>Sign up</button></a>
+                    
+                </div>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="signin">
+                <form>
+                    <span>Authorize yourself</span>
+                    <div>
+                        <label for="email">E-mail</label>
+                        <input type="email" placeholder="Enter e-mail" required>
+                    </div>
+                    <div>
+                        <label for="pass">Enter password</label>
+                        <input id="pass" type="password" placeholder="Password" required>
+                    </div>
+                    <div id="btns">
+                        <button type="reset">Clear</button>
+                        <button type="submit">Sign in</button> 
+                    </div>
+                </form>
+            </div>
+            <div class="content">
+                <p>БЕСПЛАТНАЯ ПРОФОРИЕНТИРУЮЩАЯ КОНФЕРЕНЦИЯ</p>
+                <p>27 марта 2021 • Гомель • ОКЦ • ул.Ланге,17</p>
+                
+                <div class="speakers">
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2019-10/%D0%B1%D0%BE%D0%B4%D1%80%D0%B5%D0%BD%D0%BA%D0%BE%D0%B22.jpg" alt="">
+                        <p>Иван Бодренков</p> <p>CEO @ IT-Academy (Минск)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%93%D1%83%D1%82%D1%8B%D1%80%D0%BE.jpg" alt="">
+                        <p>Янина Гутыро</p> <p>Lead QA Engineer, Scrum Master @ ITechArt (Гомель)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%A8%D0%B0%D0%B4%D1%83%D1%80%D0%BE3.jpg" alt="">
+                        <p>Александр Шадуро</p> <p>.NET Trainer, Co-Founder CTO ARTOOBA (Минск)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%9D%D0%B8%D0%BA%D0%B8%D1%82%D0%B5%D0%B2%D0%B8%D1%87_0.jpg" alt="">
+                        <p>Александра Никитевич</p> <p>Руководитель отдела по обучению и развитию персонала @ SENLA (Гродно))</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%90%D0%BD%D1%82%D0%BE%D0%BD%D0%BE%D0%B2%D0%B8%D1%87-%D0%94%D0%B0%D1%80%D1%8C%D1%8F.png" alt="">
+                        <p>Дарья Антонович</p> <p>ИТ менеджер, координатор программы стажировки @Your Dev Team (UNL Solutions) (Минск)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B9-%D0%A1%D0%B5%D0%BC%D0%B5%D0%BD%D1%86%D0%BE%D0%B2.jpg" alt="">
+                        <p>Сергей Семенцов)</p> <p>.NET Team Lead @ iTechArt (Гомель)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%9C%D0%B0%D0%BA%D1%81%D0%B8%D0%BC-%D0%9E%D1%81%D0%B8%D1%87%D0%BA%D0%B0.jpg" alt="">
+                        <p>Максим Осичка</p> <p>Senior Product Designer @ Flo Health (Минск)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%9B%D0%B0%D0%B3%D1%83%D0%BD-%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F.jpg" alt="">
+                        <p>Наталья Лагун</p> <p>Head of Recruiting @ Oxagile (Минск)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%AE%D1%80%D0%B8%D0%B9-%D0%AF%D1%81%D1%82%D1%80%D0%B5%D0%B1%D1%86%D0%B5%D0%B2.jpg" alt="">
+                        <p>Юрий Ястребцев</p> <p>Senior Software Engineer @ EPAM (Гомель)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80-%D0%95%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BA%D0%BE.jpg" alt="">
+                        <p>Владимир Еременко</p> <p>Senior Software Engineer @ SENLA (Гродно)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%BF%D1%80%D0%B0%D0%BD%D0%BA%D0%B5%D0%B2%D0%B8%D1%87.jpg" alt="">
+                        <p>Валерий Пранкевич</p> <p>Senior Software Engineer @ iTechArt (Гомель)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%98%D1%80%D0%B8%D0%BD%D0%B0%D0%A4%D1%83%D0%BA%D0%BE%D0%B2%D0%B0.jpg" alt="">
+                        <p>Ирина Фукова</p> <p>Senior Business Analyst @ EPAM (Гомель)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%9D%D0%B8%D0%BA%D0%B8%D1%82%D0%B0-%D0%93%D0%B8%D1%80%D1%83%D0%BB%D1%8F.jpg" alt="">
+                        <p>Никита Гаруля</p> <p>QA Engineer@iTechArt (Гомель)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/vakulich.png" alt="">
+                        <p>Михаил Вакулич</p> <p>FD @ SoftTeco (Гомель)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2020-02/%D0%93%D0%BE%D1%80%D1%88%D0%BA%D0%BE%D0%BB%D0%B5%D0%BF-%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B9.png" alt="">
+                        <p>Алексей Горшколеп</p> <p>Delivery Manager, .NET @ EPAM Systems (Гомель)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%A1%D0%BC%D0%BE%D0%BB%D0%B8%D0%BD-%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_0.jpg" alt="">
+                        <p>Павел Смолин</p> <p>Senior Software Developer @ Oxagile (Минск)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B9-%D0%9A%D0%BB%D0%B5%D1%89%D0%B5%D0%B2.jpg" alt="">
+                        <p>Алексей Клещев</p> <p>Software engineer (web-developer) @ iTechArt (Гомель)</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%94%D0%BC%D0%B8%D1%82%D1%80%D0%B8%D0%B9-%D0%A8%D0%BF%D0%B0%D0%BA.jpg" alt="">
+                        <p>Дмитрий Шпак</p> <p>Senior Systems Engineer @ EPAM (Гомель))</p>
+                    </div>
+                    <div>
+                        <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%94%D0%BC%D0%B8%D1%82%D1%80%D0%B8%D0%B9-%D0%91%D1%83%D1%80%D1%8F%D0%BA.jpg" alt="">
+                        <p>Дмитрий Буряк</p> <p>Lead Software Developer / Team Lead @ LeverX Group (Минск)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="links">
+                <img src="https://ipfs.rarible.com/ipfs/QmX1hLbLE3oEM4taEb6AHBStJfeWjievKqGpBanc3fxZgT/image.gif" alt="">
+                <p>
+                    Это гифка с реакцией Руслана Усачева выставлена на торги криптоискусства. На момент 12.00 19 марта 2021 года за нее предложили $1,169.44 криптовалютой.
+                </p>
+                <a href="https://rarible.com/token/0x60f80121c31a0d46b5279700f9df786054aa5ee5:507832:0xf736b525077bed36da94db037bd11493a2798e68" target="_blank">
+                    <img src="https://i.gifer.com/origin/89/895fe9f7a9783b63e05862c614cd456f_w200.gif" alt="">
+                </a>
+            </div>
             <div class="footer"></div>
+            <div id="form_modal">
+                <form id="register">
+                    <span>Let's create your account =)</span>
+                    <div>
+                        <label for="login">Choose the login</label>
+                        <input type="login" placeholder="Enter Login" required>
+                    </div>
+                    <div>
+                        <label for="email">E-mail</label>
+                        <input type="email" placeholder="Enter e-mail" required>
+                    </div>
+                    <div>
+                        <label for="pass1">Enter password</label>
+                        <input id="pass1" type="password" placeholder="Password" required>
+                    </div>
+                    <div>
+                        <label for="pass2">Confirm password</label>
+                        <input id="pass2" type="password" placeholder="Password" required>
+                    </div>
+                    <div class="gender">
+                        <label for="1">Male</label>
+                        <input type="radio" id="1" name="gender" required>
+                        <label for="2">Female</label>
+                        <input type="radio" id="1" name="gender">
+                        <label for="3">Not decided yet</label>
+                        <input type="radio" id="3" name="gender">
+                    </div>
+                    <div class="policy">
+                        <input type="checkbox" id="policy" required>
+                        <label for="policy">I agree with the privacy policy</label>
+                    </div> 
+                    <div>
+                        <label for="avatar">Choose avatar</label>
+                        <input id="avatar" type="file" required>
+                    </div>
+                    <div id="btns">
+                        <button><a href="#">Close</a></button>
+                        <button type="reset">Clear</button>
+                        <button type="submit">Register</button> 
+                    </div>
+                </form>
+            </div>
         </div>
     </body>
 </html>
