--- a/10/index.html
+++ b/10/index.html
@@ -84,7 +84,7 @@
                     </div>
                     <div>
                         <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80-%D0%95%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BA%D0%BE.jpg" alt="">
-                        <p>Владимир Еременко</p> <p>Senior Software Engineer @ SENLA (Гродно)</p>
+                        <p>Владимир Еременко</p> <p>Senior Software Engineer @ SENLA (Гомель)</p>
                     </div>
                     <div>
                         <img src="https://gomel.openit.by/sites/default/files/2021-03/%D0%BF%D1%80%D0%B0%D0%BD%D0%BA%D0%B5%D0%B2%D0%B8%D1%87.jpg" alt="">
