--- a/12/index.html
+++ b/12/index.html
@@ -16,7 +16,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="5"><input type="text" id="vars"></td>
+                    <td colspan="5"><input type="text" id="vars" readonly></td>
                 </tr>
                 <tr>
                     <td><button id="backspace" onclick="">&larr;</button></td>
@@ -42,7 +42,7 @@
                 <tr>
                     <td><button id="one" value="1" onclick="oneClick()">1</button></td>
                     <td><button id="two" value="2" onclick="twoClick()">2</button></td>
-                    <td><button id="tree" value="3" onclick="treeClick()">3</button></td>
+                    <td><button id="three" value="3" onclick="threeClick()">3</button></td>
                     <td><button id="minus" value="-" onclick="minusClick()">-</button></td>
                     <td rowspan="2"><button id="equally"  onclick="equallyClick()">=</button></td>
                 </tr>
