--- a/16/index.html
+++ b/16/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-
+    <div>
+        <div>
+            <input id="inpEl" type="text" placeholder="Введи элемент массива">
+            <button id="addBtn">Add</button>
+            <button id="viewDtn">View array</button>
+        </div>
+        <div><p id="outArr"></p></div>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
