--- a/16/index.html
+++ b/16/index.html
@@ -11,7 +11,8 @@
         <div>
             <input id="inpEl" type="text" placeholder="Введи элемент массива">
             <button id="addBtn">Add</button>
-            <button id="viewDtn">View array</button>
+            <button id="viewBtn">View array</button>
+            <button id="clearArr">Clear</button>
         </div>
         <div><p id="outArr"></p></div>
     </div>
