--- a/final/index.html
+++ b/final/index.html
@@ -1,20 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <div>
-            <input id="inpEl" type="text" placeholder="Введи элемент массива">
-            <button id="addBtn">Add</button>
-            <button id="viewBtn">View array</button>
-            <button id="clearArr">Clear</button>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="shortcut icon" href="./pic/htmlcssjs.png" type="image/png">
+        <title>Final Project FD1</title>
+    </head>
+    <body>
+        <div class="mainClass">
+            <div class="header">
+                <div class="logo">
+                    <img src="./pic/htmlcssjs.png" alt="" srcset="">
+                </div>
+                <div class="siteName">Mikhail Gasilov's final project. FD1-09-21 HTML/CSS, JS</div>
+                <div class="signIn">
+                    <button> Sign in</button>
+                </div>
+                <div class="photo"></div>
+            </div>
+            <div class="content">
+                <div id="signUp">
+                    <form id="register">
+                        <span>Let's create your account =)</span>
+                        <div>
+                            <label for="login">Choose the login</label>
+                            <input name="login" type="login" placeholder="Enter Login" required>
+                        </div>
+                        <div>
+                            <label for="email">E-mail</label>
+                            <input type="email" placeholder="Enter e-mail" required>
+                        </div>
+                        <div>
+                            <label for="pass1">Enter password</label>
+                            <input id="pass1" type="password" placeholder="Password" required>
+                        </div>
+                        <div>
+                            <label for="pass2">Confirm password</label>
+                            <input id="pass2" type="password" placeholder="Password" required>
+                        </div>
+                        <div class="gender">
+                            <label for="1">Male</label>
+                            <input type="radio" id="1" name="gender" required>
+                            <label for="2">Female</label>
+                            <input type="radio" id="1" name="gender">
+                        </div>
+                        <div class="policy">
+                            <input type="checkbox" id="policy" required>
+                            <label for="policy">I agree with the privacy policy</label>
+                        </div> 
+                        <div>
+                            <label for="avatar">Choose avatar</label>
+                            <input id="avatar" type="file" required>
+                        </div>
+                        <div id="btns">
+                            <button><a href="#">Close</a></button>
+                            <button type="reset">Clear</button>
+                            <button type="submit">Register</button> 
+                        </div>
+                    </form>
+                </div>
+                <div id="startContent"></div>
+            </div>
+            <div class="footer">
+dfdfsdf
+            </div>
         </div>
-        <div><p id="outArr"></p></div>
-    </div>
+        <script src="./js/index.js"></script>
     </body>
 </html>
