--- a/final/page.html
+++ b/final/page.html
@@ -5,27 +5,29 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
-        <title>Final Project FD1</title>
+        <link rel="shortcut icon" href="./pic/htmlcssjs.png" type="image/png">
+        <title>Document</title>
     </head>
     <body>
         <div class="mainClass">
             <div class="header">
                 <div class="logo">
+                    <img src="./pic/htmlcssjs.png" alt="">
                 </div>
-                <div class="siteName">Mikhail Gasilov's final project. FD1-09-21 HTML/CSS, JS</div>
-                <div class="signIn">
-                    <button> Sign in</button>
+                <div class="siteName">
+                    <span>Mikhail Gasilov's final project. FD1-09-21 HTML/CSS, JS</span>
                 </div>
-                <div class="photo"></div>
+                <div class="signUp">
+                    <button>Sign Up</button>
+                </div>
             </div>
             <div class="content">
-                <div></div>
-                <div></div>
+                <textarea id="userText" maxlength="200"></textarea>
+                <button>click</button>
             </div>
-            <div class="footer">
-
-            </div>
+            <div class="footer"></div>
         </div>
+
         <script src="./js/index.js"></script>
     </body>
 </html>
