--- a/final/index.html
+++ b/final/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="shortcut icon" href="./pic/htmlcssjs.png" type="image/png">
-        <title>Document</title>
+        <title>FD1-09-21 HTML/CSS, JS</title>
     </head>
     <body>
         <div class="mainClass">
@@ -22,8 +22,26 @@
                 </div>
             </div>
             <div class="content">
+                <div class="signIn">
+                    <form action="">
+                        <input type="email" placeholder="enter e-mail">
+                        <input type="password" placeholder="enter password">
+                        <input type="submit">
+
+                    </form>
+                </div>
+                <div class="siteInfo">
+                    fgfdgdfg
+                </div>
             </div>
-            <div class="footer"></div>
+            <div class="footer">
+                <div><a href="https://www.gomel.it-academy.by/">IT-academy</a></div>
+                <div><a href="https://gomel.iteen.by/">ITeen academy</a></div>
+                <div><a href="https://gomel.openit.by/">OPEN IT</a></div>
+                <div><a href="https://www.openitkids.by/">OPEN IT kids</a></div>
+                <div><span>Mentoring by Aliaksei Kliashchou</span></div>
+                <div><span>© Mikhail Hasilau</span></div>
+            </div>
         </div>
 
         <script src="./js/index.js"></script>
