--- a/18/index.html
+++ b/18/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <audio id="music" src="./music.mp3"></audio>
     <script src="./index.js"></script>
 </body>
 </html>
