--- a/final/final/src/index.html
+++ b/final/final/src/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/style.css">
         <link rel="shortcut icon" href="./pic/htmlcssjs.png" type="image/png">
         <title>FD1-09-21 HTML/CSS, JS</title>
     </head>
@@ -15,24 +14,20 @@
                     <img src="./pic/htmlcssjs.png" alt="">
                 </div>
                 <div class="siteName">
-                    <span>Mikhail Gasilov's final project. FD1-09-21 HTML/CSS, JS</span>
+                    <span>FD1-09-21 HTML/CSS, JS</span>
                 </div>
-                <div class="signUp">
-                    <button>Sign Up</button>
+                <div class="signUpMain">
+                    <a href="sign-up.html">Sign Up</a>
+                </div>
+                <div class="signInMain">
+                    <a href="sign-in.html">Sign In</a>
                 </div>
             </div>
             <div class="content">
-                <div class="signIn">
-                    <form action="">
-                        <input type="email" placeholder="enter e-mail">
-                        <input type="password" placeholder="enter password">
-                        <input type="submit">
-
-                    </form>
-                </div>
-                <div class="siteInfo">
-                    fgfdgdfg
-                </div>
+                <p>Welcome to the final project website. This site is analogous to Twitter or LiveJournal on "minimal".</p> 
+                <p>Sit back and prepare your questions.</p>
+                <p>It won't be long.</p>
+                <img src="./pic/htmlcssjs.png" alt="">
             </div>
             <div class="footer">
                 <div><a href="https://www.gomel.it-academy.by/">IT-academy</a></div>
@@ -43,7 +38,5 @@
                 <div><span>© Mikhail Hasilau</span></div>
             </div>
         </div>
-
-        <script src="./js/index.js"></script>
     </body>
 </html>
